backends/drm: fix implicit modifier fallback

The per-plane format list only contains explicit modifiers, so this basically
forced explicit modifiers in all cases.

BUG: 511216